// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> component Basic tag veriant should render a span html element with given styles 1`] = `
.emotion-0 {
  border: 1px solid #323232;
  background-color: #FFFFFF;
  color: #4F4F4F;
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.5px;
  padding: 4px 6px;
  border-radius: 2px;
}

<div>
  <span
    class="emotion-0 emotion-1"
    data-testid="tag"
  >
    Active
  </span>
</div>
`;

exports[`<Tag /> component should render a span html element with the given content 1`] = `
.emotion-0 {
  border: 0;
  background-color: #E6F5FF;
  color: #151617;
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.5px;
  padding: 4px 6px;
  border-radius: 2px;
}

<div>
  <span
    class="emotion-0 emotion-1"
    data-testid="tag"
  >
    Active
  </span>
</div>
`;

exports[`<Tag /> component should render a wrapper for a group of tags 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.emotion-2 {
  border: 0;
  background-color: #E6F5FF;
  color: #151617;
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.5px;
  padding: 4px 6px;
  border-radius: 2px;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      data-testid="tag"
    >
      Active
    </span>
    <span
      class="emotion-2 emotion-3"
      data-testid="tag"
    >
      Inactive
    </span>
  </div>
</div>
`;
